src/test/deca/syntax/invalid/expr/test_expr_unary_with_plus.deca
// Description:
//    tests de programme syntaxiquement incorrects : operateur unaire + incorrect
//
// Resultats:
//    Ligne 13: no viable alternative at input 'a'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(+a == 2) {
        a = 2;
    }
}
